--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,23 +1,14 @@
 <nav class="nav-menu">
   <h3>Menu</h3>
   <%= link_to 'Cenit', "#{root_path}", :class => 'item', data: { no_turbolink: true }  %>
-  <% if current_user.present? %>
-    <%= link_to 'Edit account', edit_user_registration_path, :class => 'item', data: { no_turbolink: true } %>
-    <%= link_to 'Profile', status_path(current_user.id), :class => 'item', data: { no_turbolink: true } %>
-  <% end %>
 
   <%= link_to 'Data Integrator', hub_path, :class => 'item', :class => 'item' %>
-  <%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item', :class => 'item' %>
   <%= link_to 'App Directory', '/directory', :class => 'item', data: { no_turbolink: true } %>
-  <% link_to 'Pricing', "#{root_path}#pricing", :class => 'item', :class => 'item' %>
+  <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item', :class => 'item' %>
   <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item', :class => 'item' %>
   <%= link_to 'API Guide',ENV['API_URL'], :class => 'item', :class => 'item' %>
   <%= link_to 'Blog', blog_index_path, :class => 'item', data: { no_turbolink: true } %>
   <%= link_to 'Terms of service', '/terms_of_service', :class => 'item', :class => 'item'%>
-  <% if current_user && current_user.has_role?(:admin) %>
-    <%= link_to 'Applications', 'oauth/applications' %>
-    <%= link_to 'Rails Admin', '/data' %>
-  <% end %>
   <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Contact Us</a>
   <a data-toggle="modal" style='margin-bottom: 0px; pointer-events: none;cursor: default;'; class="item" href="#">Follow Us:</a>
   <div class="social" style='margin-top: 0px; '>
