--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -1,9 +1,3 @@
-<% if current_user.present? %>
-  <% ref = '#' %>
-<% else %>
-  <% ref = "#sing_up" %>
-<% end %>
-
 <div id="pricing">
   <div class="container">
     <div class="row header">
@@ -34,7 +28,7 @@
               data exchange
             </div>
           </div>
-          <a class="btn-signup button-clear" href='<%= ref %>' >
+          <a class="btn-signup button-clear" href='https://cenit.io' >
             <span>Start free</span>
           </a>
 
@@ -59,7 +53,7 @@
               commercial transaction
             </div>
           </div>
-          <a class="btn-signup button-clear" href='<%= ref %>' >
+          <a class="btn-signup button-clear" href='https://cenit.io' >
             <span>Start</span>
           </a>
         </div>
