--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -2,8 +2,7 @@
   <h3>Menu</h3>
   <%= link_to 'Cenit', "#{root_path}", :class => 'item', data: { no_turbolink: true }  %>
 
-  <%= link_to 'Data Integrator', hub_path, :class => 'item', :class => 'item' %>
-  <%= link_to 'App Directory', '/directory', :class => 'item', data: { no_turbolink: true } %>
+  <% link_to 'App Directory', '/directory', :class => 'item', data: { no_turbolink: true } %>
   <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item', :class => 'item' %>
   <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item', :class => 'item' %>
   <%= link_to 'API Guide',ENV['API_URL'], :class => 'item', :class => 'item' %>
